fixed sponsor clipping

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -360,6 +360,11 @@ img.responsive-img-h {
           width: 100%;
           height: 100%;
           object-fit: contain;
+
+          @media screen and (max-width: 800px) {
+            margin-bottom: 8px;
+          }
+
         }
       }
     }
